fixing white space

--- a/style_sheet copy.css
+++ b/style_sheet copy.css
@@ -25,6 +25,7 @@ body {
     padding-top: 30px;
     margin:0 auto;
     background-color: white;
+    overflow-x: hidden;
     /* text-align: center; */
     /* width:100%; */
 }
@@ -128,7 +129,7 @@ section {
   text-align:center;
   margin-left:20%;
   margin-right:20%;
-  padding-top:10px;
+  padding-top:30px;
 }
 
 .top-heading{
@@ -158,7 +159,7 @@ section {
 
 .flex-container-pricing > div {
     background-color:  #F0F8FF;
-    width:200px;
+    width:300px;
     /* display:inline-block; */
     /* flex:0 0 1; */
     /* flex-wrap: nowrap; */
@@ -170,6 +171,7 @@ section {
     /* line-height: 75px; */
     font-size: 20px;
     padding:30px;
+    padding-top:10px;
 
 }
 
